[package]
name = "rsepl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.11", default-features = false }
dirs = "5.0.1"
cargo_metadata = "0.18.1"
pico-args = { version = "0.5.0", features = ["eq-separator"] }
reedline = "0.31.0"

[[bin]]
name = "cargo-rspl"
path = "src/main.rs"
