[package]
name = "rsepl"
description = "A rust REPL in your crate"
readme = "README.md"
repository = "https://github.com/vonforum/cargo-rspl"
version = "0.3.1"
edition = "2021"
authors = ["vonforum <vonforum@windowslive.com>"]
license = "MIT OR Apache-2.0"
keywords = ["cargo", "repl"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
cargo_metadata = "0.18.1"
pico-args = { version = "0.5.0", features = ["eq-separator"] }
reedline = "0.31.0"

[[bin]]
name = "cargo-rspl"
path = "src/main.rs"
